--- a/css/sample.css
+++ b/css/sample.css
@@ -12,59 +12,85 @@ header {
     padding-bottom: 4px; }
   @media (max-width: 550px) {
     header .logo {
-      width: 190px; } }
-  @media (min-width: 551px) {
-    header .sp_navi {
-      display: none; } }
-  header #header_in {
-    padding: 15px 0 10px 0; }
-  header .pc_navi_li {
+      width: 190px; }
+    header .navi {
+      width: 40px;
+      float: right; } }
+  header .sp_navi_li {
+    width: 180px;
+    position: absolute;
+    top: 50px;
+    right: 2%;
+    border: 1px solid #eee;
+    background: white;
     margin: 0;
+    padding: 0;
+    display: none; }
+
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+  li a {
+    display: block;
+    padding: 10px 8px;
+    border-bottom: 1px solid #eee;
+    font-size: 14px;
+    text-decoration: none; }
+
+@media (min-width: 551px) {
+  .sp_navi {
+    display: none; } }
+#header_in {
+  padding: 15px 0 10px 0; }
+
+.pc_navi_li {
+  margin: 0;
+  padding: 0; }
+  .pc_navi_li li {
+    list-style: none;
+    margin: 5px 0 0 0;
     padding: 0; }
-    header .pc_navi_li li {
-      list-style: none;
-      margin: 5px 0 0 0;
-      padding: 0; }
-      header .pc_navi_li li a {
-        color: #626262;
-        text-decoration: none;
-        font-weight: bold;
-        font-size: 14px;
-        font-size: 1.4rem;
-        float: left;
-        padding-right: 10px; }
-      header .pc_navi_li li a:hover {
-        color: #42b9d0; }
-    header .pc_navi_li li.navi_toppage a {
-      background-repeat: no-repeat;
-      display: inline-block;
-      line-height: 40px;
-      padding-left: 50px;
-      background-image: url("../images/navi_top.png");
-      background-size: 40px 40px; }
-      @media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
-        header .pc_navi_li li.navi_toppage a {
-          background-image: url("../images/navi_top@2x.png"); } }
-    header .pc_navi_li li.navi_news a {
-      background-repeat: no-repeat;
-      display: inline-block;
-      line-height: 40px;
-      padding-left: 50px;
-      background-image: url("../images/navi_news.png");
-      background-size: 40px 40px; }
-      @media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
-        header .pc_navi_li li.navi_news a {
-          background-image: url("../images/navi_news@2x.png"); } }
-    header .pc_navi_li li.navi_company a {
-      background-repeat: no-repeat;
-      display: inline-block;
-      line-height: 40px;
-      padding-left: 50px;
-      background-image: url("../images/navi_company.png");
-      background-size: 40px 40px; }
-      @media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
-        header .pc_navi_li li.navi_company a {
-          background-image: url("../images/navi_company@2x.png"); } }
+    .pc_navi_li li a {
+      color: #626262;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 14px;
+      font-size: 1.4rem;
+      float: left;
+      padding-right: 10px; }
+    .pc_navi_li li a:hover {
+      color: #42b9d0; }
+  .pc_navi_li li.navi_toppage a {
+    background-repeat: no-repeat;
+    display: inline-block;
+    line-height: 40px;
+    padding-left: 50px;
+    background-image: url("../images/navi_top.png");
+    background-size: 40px 40px; }
+    @media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+      .pc_navi_li li.navi_toppage a {
+        background-image: url("../images/navi_top@2x.png"); } }
+  .pc_navi_li li.navi_news a {
+    background-repeat: no-repeat;
+    display: inline-block;
+    line-height: 40px;
+    padding-left: 50px;
+    background-image: url("../images/navi_news.png");
+    background-size: 40px 40px; }
+    @media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+      .pc_navi_li li.navi_news a {
+        background-image: url("../images/navi_news@2x.png"); } }
+  .pc_navi_li li.navi_company a {
+    background-repeat: no-repeat;
+    display: inline-block;
+    line-height: 40px;
+    padding-left: 50px;
+    background-image: url("../images/navi_company.png");
+    background-size: 40px 40px; }
+    @media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+      .pc_navi_li li.navi_company a {
+        background-image: url("../images/navi_company@2x.png"); } }
 
 @media (max-width: 550px) {
   .pc_navi {
@@ -142,6 +168,8 @@ header {
 
 #news_area {
   background-color: #eaf2f4; }
+  #news_area.news-page {
+    background: #fff; }
   @media (min-width: 551px) {
     #news_area .container {
       padding: 0px 10% 50px 10%; } }
@@ -153,15 +181,18 @@ header {
     padding: 15px 0 10px 0;
     font-weight: bold;
     letter-spacing: 0.2rem; }
-  #news_area .news_lists li {
+  #news_area .news_lists li, #news_area .news_li li {
     list-style: none;
     font-size: 15px;
     font-size: 1.5rem; }
-    #news_area .news_lists li span {
+    #news_area .news_lists li span, #news_area .news_li li span {
       color: #42b9d0;
       font-weight: bold;
-      display: block;
+      display: inline-block;
       margin-bottom: 3px; }
+      @media (max-width: 550px) {
+        #news_area .news_lists li span, #news_area .news_li li span {
+          display: block; } }
   @media (min-width: 551px) {
     #news_area .news_title {
       font-size: 22px;
@@ -173,17 +204,16 @@ header {
       margin-bottom: 20px; }
       #news_area .news_lists li span {
         display: inline;
-        margin-bottom: 0px;
-        padding: 50px; } }
+        margin-bottom: 0px; } }
 
 footer {
   background-color: #42b9d0;
   color: #fff;
-  padding-top: 50px; }
+  padding-top: 20px; }
   @media (max-width: 550px) {
     footer .container {
-      margin-top: 30px;
-      padding-top: 30px; }
+      margin: 0;
+      padding: 0; }
     footer .sp {
       padding: 0 6%;
       margin: 0 auto; }
@@ -290,7 +320,6 @@ h1 {
     width: 100%;
     max-width: 960px;
     margin: 0 auto;
-    padding: 0 20px;
     box-sizing: border-box; } }
 #news_contents .news_title {
   text-align: left;
@@ -302,15 +331,6 @@ h1 {
   letter-spacing: -.1rem;
   border-bottom: 3px solid #42b9d0;
   margin-bottom: 20px; }
-#news_contents .news_li li {
-  list-style: none;
-  font-size: 15px;
-  font-size: 1.5rem; }
-  #news_contents .news_li li span {
-    color: #42b9d0;
-    font-weight: bold;
-    display: inline-block;
-    margin-bottom: 3px; }
 @media (min-width: 551px) {
   #news_contents .news_title {
     font-size: 22px;
@@ -349,7 +369,7 @@ h1 {
   background-size: 4px 8px;
   background-repeat: no-repeat; }
 
-.company_title {
+.company_title, .news_title {
   text-align: left;
   font-size: 26px;
   font-size: 2.6rem;
